@startuml

class Chatbot{
String personalidad

String tiempoActual()
void chatbot()
void beginDialog()
void endDialog()
void rate()
void setChatbot()
}

class Log{
List log

List setFirstLog()
List setLog()
void saveLog()
void loadLog()
boolean esLog()
}

class Usuario{
String nombreUsuario
String pedidoUsuario
String getNombreUsuario()
String getPedidoUsuario()
String setNombreUsuario()
String setPedidoUsuario()
}

Chatbot <-- Log
Chatbot <-- Usuario





@enduml